3-Kubernetes/demos/hostPathVolumeRead.yml
apiVersion: v1
kind: Pod
metadata:
  name: result-viewer
spec:
  containers:
    - name: result-viewer
      image: ubuntu
      command: ["/bin/sh", "-c"]
      args: ["cat /opt/result.txt"]
      volumeMounts:
      - mountPath: /opt
        name: data-volume
  restartPolicy: Never
  volumes:
  - name: data-volume
    hostPath:
      path: /var/local/clc3
      type: Directory
