3-Kubernetes/demos/serviceaccount.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl-pod
  labels:
    app.kubernetes.io/name: kubectl-pod
spec:
  serviceAccountName: pod-list-reader
  containers:
    - name: kubectl-container
      image: bitnami/kubectl:latest
      tty: true
      command: ["/bin/sh"]
