3-Kubernetes/demos/networkpolicy.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: curl-allowed
  labels:
    app.kubernetes.io/name: curl-allowed
spec:
  containers:
    - name: curl-container
      image: curlimages/curl
      tty: true
      stdin: true
      stdinOnce: true
      args:
      - sh
---
apiVersion: v1
kind: Pod
metadata:
  name: curl-forbidden
  labels:
    app.kubernetes.io/name: curl-forbidden
spec:
  containers:
    - name: curl-container
      image: curlimages/curl
      tty: true
      stdin: true
      stdinOnce: true
      args:
      - sh
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: curl-allowed
    ports: 
    - protocol: TCP
      port: 80
